--- a/buildscript.gradle
+++ b/buildscript.gradle
@@ -27,10 +27,10 @@ rootProject.buildscript {
                 }
             }
         }
-        maven {
+        maven-publish {
             url "https://repository.springsource.com/maven/bundles/release"
         }
-        maven {
+        maven-publish {
             url "https://repository.springsource.com/maven/bundles/external"
         }
         if (rosMavenRepository != null) {
@@ -38,7 +38,7 @@ rootProject.buildscript {
                 url rosMavenRepository
             }
         }
-        maven {
+        maven-publish {
             url "https://github.com/rosjava/rosjava_mvn_repo/raw/master"
         }
         google()
